# task-manager

./: README.md  deployment_guide.md
backend/: .gitignore  build.sh  db.sqlite3  pyproject.toml  requirements.txt
backend/apps/tasks/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/tasks/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
frontend/: next.config.ts
frontend/app/: globals.css  page.tsx
frontend/components/: TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/lib/: api.ts  types.ts
