[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "gunicorn>=23.0.0",
    "dj-database-url>=2.3.0",
    "psycopg[binary]>=3.2.1",
    "whitenoise>=6.8.2",
]
